# Chip8_emulator

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  wasm.rs
web/: index.html  index.js
