[package]
name = "chip8_emulator"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
rand = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.28.0"
rodio = "0.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
